# Rust2dGameEngine

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  window.rs
data/: settings.json
settings/: Cargo.toml
settings/src/: lib.rs
src/: main.rs
src/core/: Cargo.toml
src/core/src/: lib.rs  startup.rs  window.rs
